2007-07-30  Mickael Remond  <mickael.remond@process-one.net>

	* src/xml.erl: Only wrap xmldata nodes in xml cdata "tag" if
	bigger than 50 bytes. Shorter xmlcdata nodes will be escaped.
	
	* src/tls/tls_drv.c: Sends the entire certificate chain (EJAB-209).

	* src/acl.erl: Remove compilation warnings (EJAB-290).

	* src/xml_stream.erl: Group CDATA on a single xmlcdata
	node (splitting is not relevant as dependant on TCP/IP packet
	fragmentation) (EJAB-292).
	
	* src/xml.erl: Remove compilation warnings (EJAB-290).

	* src/xml.erl: Do not crypt binary CData, but enclose the value in
	XML CDATA "tag".
	
	* src/xml.erl: Code clean-up: removed old code in comments.

2007-07-28  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_roster_odbc.erl: Better error management when bad JID in
	roster table (EJAB-289).

2007-07-26  Mickael Remond  <mickael.remond@process-one.net>

	* src/web/ejabberd_web_admin.erl: Code clean-up.
	
	* src/mod_offline.erl: Code clean-up.

	* src/gen_mod.erl: Throw error more cleanly.
	
	* src/mod_configure.erl: One ACL call was not virtual host
	compliant.

	* src/ejabberd_auth_odbc.erl: Fixed wrong call preventing user
	removal with relational databases.

	* src/mod_last_odbc.erl: Adapted to mod_privacy changes.
	* src/mod_privacy_odbc.erl: Refactoring to extract records in
	include file.
	
	* src/mod_last.erl: Adapted to mod_privacy changes.
	* src/mod_privacy.erl: Refactoring to extract records in include
	file.
	* src/mod_privacy.hrl: Likewise.

	* src/mod_roster_odbc.erl: Fixed wrong call.
					 
2007-07-24  Mickael Remond  <mickael.remond@process-one.net>

	* doc/guide.tex: Added recommandations on max_stanza options
	usage.

	* src/ejabberd_s2s_out.erl: Autodisconnect s2s connections which
	are overloaded (EJAB-287).
	* src/p1_fsm.erl: Likewise.

2007-07-19  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd_s2s_in.erl: Add s2s whitelist / blacklist support
	on incoming s2s connections (EJAB-283)